SERVER-60708 Improve collection validation response for document schema validation