src/mongo/db/catalog/collection_mock.h
@@ -100,7 +100,8 @@ public:
         std::abort();
     }
 
-    Status checkValidation(OperationContext* opCtx, const BSONObj& document) const {
+    std::pair<SchemaValidationResult, Status> checkValidation(OperationContext* opCtx,
+                                                              const BSONObj& document) const {
         std::abort();
     }
 
